# SteamEmulator

./: CMakeLists.txt  CMakeSettings.json  vcpkg.json
dll/: steam_ugc.h
proto/: CMakeLists.txt
